--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
                 <div class="welcome__container">
                     <h1>We grow <span class="color__h1">plants</span> and give you oxygen</h1>
                     <p class="welcome__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                    <button class="learn__more"><a class="learn_more__link" href="#MORE" >LEARN MORE</a></button>
+                    <form action="#More">
+                        <button class="learn__more">LEARN MORE
+                        </button>
+                    </form>
                 </div>
             </section>
             <section id = "AboutUs" class="about">
@@ -60,9 +63,18 @@
                 <div class="services__content_container">
                     <h2 class="h2__service">Service and our projects</h2>
                     <div class="buttons__service">
-                        <button id="gardens" class="orange_button__services"><a href=""  class="style_buttons__service">Gardens</a></button>
-                        <button id="lawn" class="orange_button__services"><a href="" class="style_buttons__service">Lawn</a></button>
-                        <button id="planting" class="orange_button__services"><a href="" class="style_buttons__service">Planting</a></button>
+                        <form action="#"> 
+                            <button id="gardens" class="orange_button__services">Gardens
+                            </button>
+                        </form>
+                        <form action="#">
+                            <button id="lawn" class="orange_button__services">Lawn
+                            </button>
+                        </form>
+                        <form action="#">
+                            <button id="planting" class="orange_button__services">Planting
+                            </button>
+                        </form>
                     </div>
                 </div>
                 <div class="services__sections_wrapper">
@@ -91,7 +103,32 @@
                     </div>
                 </div>
             </section>
-            <section id = "Price" class="prices"></section>
+            <section id = "Price" class="prices">
+                <div class="background__white">
+                    <div class="wrapper">
+                        <div class="prices__help_container">
+                            <div class="prices__container">
+                                <h2 class="h2__prices">Prices</h2>
+                                <div class="buttons__container_prices">
+                                    <div class="button__price_basics"><a href="#" class="link__basics"><p class="buttons__font_prices">Basics</p><img src="./img/prices/1.png" alt="pointer">
+                                    </div></a>
+                                    <div class="button__price_standard"><a href="#" class="link__standard"><p class="buttons__font_prices">Standard</p><img src="./img/prices/1.png" alt="pointer"></a>
+                                    </div>
+                                    <div class="button__price_pro"><a href="#" class="link__pro"><p class="buttons__font_prices">Pro care</p><img src="./img/prices/1.png" alt="pointer"></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="help__container">
+                                <h2 class="h2__help">Our best <span class="h2__green_help">gardeners</span> are ready to help you</h2>
+                                <form action="#Contacts">
+                                <button class="button__help_contacts">Contact us</button>
+                                </form>
+                                <img src="./img/prices/leafs.png" alt="leafs__help" class="leafs__help">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section id = "Contacts" class="contacts"></section>
         </main>
         <footer class="footer"></footer>
