--- a/index.html
+++ b/index.html
@@ -1,70 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inika:regular,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/iconsfont.css">
     <title>Plants</title>
-    <link rel="icon" href="./img/icon.svg" type="image/svg">
+    <link rel="icon" href="./favicon.svg" type="image/svg">
 </head>
+
 <body>
     <div class="wrapper">
-        <header id = "Home">
+        <header id="Home">
             <div class="nav__container">
-            <div class="logo__navbar">
-            <p><a href="#"><img src="./img/logo.svg" alt="logo"></a></p>
-            </div>
-            <nav class="menu__navbar">
-            <ul class="menu__list">
-                <li class="menu__item"><a class="menu__link" href="#Home" ><span class="orange">Home</span></a></li><!--
-                --><li class="menu__item"><a class="menu__link" href="#AboutUs">About us</a></li><!--
-                --><li class="menu__item"><a class="menu__link" href="#Service">Service</a></li><!--
-                --><li class="menu__item"><a class="menu__link" href="#Price" >Price</a></li><!--
-                --><li class="menu__item"><a class="menu__link" href="#Contacts" >Contacts</a></li>
-            </ul>
-            </nav>
+                <div class="logo__navbar">
+                    <p><a href="#"><img src="./img/logo.svg" alt="logo"></a></p>
+                </div>
+                <nav class="menu__navbar">
+                    <ul class="menu__list">
+                        <li class="menu__item"><a class="menu__link" href="#Home"><span class="orange">Home</span></a>
+                        </li><!--
+                -->
+                        <li class="menu__item"><a class="menu__link" href="#AboutUs">About us</a></li><!--
+                -->
+                        <li class="menu__item"><a class="menu__link" href="#Service">Service</a></li><!--
+                -->
+                        <li class="menu__item"><a class="menu__link" href="#Price">Price</a></li><!--
+                -->
+                        <li class="menu__item"><a class="menu__link" href="#Contacts">Contacts</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
         <main>
-            <section id = "welcome" class="welcome">
+            <section id="welcome" class="welcome">
                 <div class="leafs__picture">
                     <img src="./img/welcome/leafs.png" alt="leafs">
                 </div>
                 <div class="welcome__container">
                     <h1>We grow <span class="color__h1">plants</span> and give you oxygen</h1>
-                    <p class="welcome__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                    <form action="#More">
+                    <p class="welcome__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <form action="#Service">
                         <button class="learn__more">LEARN MORE
                         </button>
                     </form>
                 </div>
             </section>
-            <section id = "AboutUs" class="about">
+            <section id="AboutUs" class="about">
                 <div class="background__white">
                     <div class="wrapper">
                         <div class="aboutUs__container">
                             <div class="text__information_aboutUs">
-                            <h2 class="h2_aboutUs">We are <span class="orange">professional experienced</span> gardeners</h2>
-                            <p class="text__aboutUs">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-                    dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-                    book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
-                    unchanged.</p>
+                                <h2 class="h2_aboutUs">We are <span class="orange">professional experienced</span>
+                                    gardeners</h2>
+                                <p class="text__aboutUs">Lorem Ipsum is simply dummy text of the printing and
+                                    typesetting industry. Lorem Ipsum has been the industry's standard
+                                    dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                                    scrambled it to make a type specimen
+                                    book. It has survived not only five centuries, but also the leap into electronic
+                                    typesetting, remaining essentially
+                                    unchanged.</p>
                             </div>
-                            <img class ="houseplant" src="./img/aboutUs/1.png" alt="houseplant">
+                            <img class="houseplant" src="./img/aboutUs/1.png" alt="houseplant">
                         </div>
                     </div>
                 </div>
             </section>
-            <section id = "Service" class="service">
+            <section id="Service" class="service">
                 <div class="services__content_container">
                     <h2 class="h2__service">Service and our projects</h2>
                     <div class="buttons__service">
-                        <form action="#"> 
+                        <form action="#">
                             <button id="gardens" class="orange_button__services">Gardens
                             </button>
                         </form>
@@ -79,50 +94,85 @@
                     </div>
                 </div>
                 <div class="services__sections_wrapper">
-                    <div class="garden__care"><a href="" class="gardens__service"><img src="./img/services_plants/one.png" alt="garden-care" class="services__card__img">
-                        <div class="text__services"><h3 class="services__name">Garden care</h3><p class="text__card">Lorem Ipsum has been the industry</p>
-                        </div></a>
+                    <div class="garden__care"><a href="" class="gardens__service"><img
+                                src="./img/services_plants/one.png" alt="garden-care" class="services__card__img">
+                            <div class="text__services">
+                                <h3 class="services__name">Garden care</h3>
+                                <p class="text__card">Lorem Ipsum has been the industry</p>
+                            </div>
+                        </a>
                     </div>
-                    <div class="planting"><a href="" class="planting__service"><img src="./img/services_plants/two.png" alt="planting" class="services__card__img">
-                        <div class="text__services"><h3 class="services__name">Planting</h3><p class="text__card">Lorem Ipsum has been the industry</p>
-                        </div></a>
+                    <div class="planting"><a href="" class="planting__service"><img src="./img/services_plants/two.png"
+                                alt="planting" class="services__card__img">
+                            <div class="text__services">
+                                <h3 class="services__name">Planting</h3>
+                                <p class="text__card">Lorem Ipsum has been the industry</p>
+                            </div>
+                        </a>
                     </div>
-                    <div class="lawn__care"><a href="" class="lawn__service"><img src="./img/services_plants/three.png" alt="lawn-care" class="services__card__img">
-                        <div class="text__services"><h3 class="services__name">Lawn care</h3><p class="text__card">Lorem Ipsum has been the industry</p>
-                        </div></a>
+                    <div class="lawn__care"><a href="" class="lawn__service"><img src="./img/services_plants/three.png"
+                                alt="lawn-care" class="services__card__img">
+                            <div class="text__services">
+                                <h3 class="services__name">Lawn care</h3>
+                                <p class="text__card">Lorem Ipsum has been the industry</p>
+                            </div>
+                        </a>
                     </div>
-                    <div class="planting"><a href="" class="planting__service"><img src="./img/services_plants/four.png" alt="planting-care" class="services__card__img">
-                        <div class="text__services"><h3 class="services__name">Planting</h3><p class="text__card">Lorem Ipsum has been the industry</p>
-                        </div></a>
+                    <div class="planting"><a href="" class="planting__service"><img src="./img/services_plants/four.png"
+                                alt="planting-care" class="services__card__img">
+                            <div class="text__services">
+                                <h3 class="services__name">Planting</h3>
+                                <p class="text__card">Lorem Ipsum has been the industry</p>
+                            </div>
+                        </a>
                     </div>
-                    <div class="garden__care"><a href="" class="gardens__service"><img src="./img/services_plants/five.png" alt="garden-care" class="services__card__img">
-                        <div class="text__services"><h3 class="services__name">Garden care</h3><p class="text__card">Lorem Ipsum has been the industry</p>
-                        </div></a>
+                    <div class="garden__care"><a href="" class="gardens__service"><img
+                                src="./img/services_plants/five.png" alt="garden-care" class="services__card__img">
+                            <div class="text__services">
+                                <h3 class="services__name">Garden care</h3>
+                                <p class="text__card">Lorem Ipsum has been the industry</p>
+                            </div>
+                        </a>
                     </div>
-                    <div class="planting"><a href="" class="planting__service"><img src="./img/services_plants/six.png" alt="planting-care" class="services__card__img">
-                        <div class="text__services"><h3 class="services__name">Planting</h3><p class="text__card">Lorem Ipsum has been the industry</p></div></a>
+                    <div class="planting"><a href="" class="planting__service"><img src="./img/services_plants/six.png"
+                                alt="planting-care" class="services__card__img">
+                            <div class="text__services">
+                                <h3 class="services__name">Planting</h3>
+                                <p class="text__card">Lorem Ipsum has been the industry</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </section>
-            <section id = "Price" class="prices">
+            <section id="Price" class="prices">
                 <div class="background__white">
                     <div class="wrapper">
                         <div class="prices__help_container">
                             <div class="prices__container">
                                 <h2 class="h2__prices">Prices</h2>
                                 <div class="buttons__container_prices">
-                                    <div class="button__price_basics"><a href="#" class="link__basics"><p class="buttons__font_prices">Basics</p><img src="./img/prices/1.png" alt="pointer"></a>
+                                    <div class="button__price_basics"><a href="#" class="link__basics">
+                                            <p class="buttons__font_prices">Basics</p><img src="./img/prices/1.png"
+                                                class="pointer__prices" alt="pointer">
+                                        </a>
                                     </div>
-                                    <div class="button__price_standard"><a href="#" class="link__standard"><p class="buttons__font_prices">Standard</p><img src="./img/prices/1.png" alt="pointer"></a>
+                                    <div class="button__price_standard"><a href="#" class="link__standard">
+                                            <p class="buttons__font_prices">Standard</p><img src="./img/prices/1.png"
+                                                class="pointer__prices" alt="pointer">
+                                        </a>
                                     </div>
-                                    <div class="button__price_pro"><a href="#" class="link__pro"><p class="buttons__font_prices">Pro care</p><img src="./img/prices/1.png" alt="pointer"></a>
+                                    <div class="button__price_pro"><a href="#" class="link__pro">
+                                            <p class="buttons__font_prices">Pro care</p><img src="./img/prices/1.png"
+                                                class="pointer__prices" alt="pointer">
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                             <div class="help__container">
-                                <h2 class="h2__help">Our best <span class="h2__green_help">gardeners</span> are ready to help you</h2>
+                                <h2 class="h2__help">Our best <span class="h2__green_help">gardeners</span> are ready to
+                                    help you</h2>
                                 <form action="#Contacts">
-                                <button class="button__help_contacts">Contact us</button>
+                                    <button class="button__help_contacts">Contact us</button>
                                 </form>
                                 <img src="./img/prices/leafs.png" alt="leafs__help" class="leafs__help">
                             </div>
@@ -130,34 +180,49 @@
                     </div>
                 </div>
             </section>
-            <section id = "Contacts" class="contacts">
-                <img src="/img/contact/1.png" alt="woman" class="woman__contacts">
+            <section id="Contacts" class="contacts">
+                <img src="./img/contact/1.png" alt="woman" class="woman__contacts">
                 <h2 class="h2__contact">Contact us</h2>
-                <div class="content__contact">
-                    <a href="#" class="city__button"><p>City</p><img src="./img/contact/pointer.png" alt="pointer"></a>
-                </div>
+                <details class="content__contact">
+                    <summary class="close__style_contact"><span class="city__position">City</span></summary>
+                    <ul class="cities__contact">
+                        <li class="canandaigua__city">Canandaigua, NY</li>
+                        <li class="ny__city">New York City</li>
+                        <li class="yonkers__city">Yonkers, NY</li>
+                        <li class="sherrill__city">Sherrill, NY</li>
+                    </ul>
+                </details>
             </section>
         </main>
         <footer class="footer">
             <div class="background__white">
                 <div class="wrapper">
                     <div class="footer__container">
-                        <div class="footer__data"><p>©<span class="year__footer">2022</span><a href="https://github.com/AleksaRoad" class="github__autors" target="_blank">github</a></p>
+                        <div class="footer__data">
+                            <p>©<span class="year__footer">2022</span><a href="https://github.com/AleksaRoad"
+                                    class="github__autors" target="_blank">github</a></p>
                         </div>
-                        <a href="https://rs.school/js-stage0/" class="link__footer" target="_blank">Rolling Scopes School</a>
+                        <a href="https://rs.school/js-stage0/" class="link__footer" target="_blank">Rolling Scopes
+                            School</a>
                         <ul class="social__list">
-                            <li class="footer__item"><a href="https://www.instagram.com/" class="_icon-inst" target="_blank"></a>
+                            <li class="footer__item"><a href="https://www.instagram.com/" class="_icon-inst"
+                                    target="_blank"></a>
                             </li>
-                            <li class="footer__item"><a href="https://www.facebook.com/" class="_icon-fb" target="_blank"></a>
+                            <li class="footer__item"><a href="https://www.facebook.com/" class="_icon-fb"
+                                    target="_blank"></a>
                             </li>
-                            <li class="footer__item"><a href="https://twitter.com/" class="_icon-twit" target="_blank"></a>
+                            <li class="footer__item"><a href="https://twitter.com/" class="_icon-twit"
+                                    target="_blank"></a>
                             </li>
-                            <li class="footer__item"><a href="https://www.pinterest.com/" class="_icon-pin" target="_blank"></a>
+                            <li class="footer__item"><a href="https://www.pinterest.com/" class="_icon-pin"
+                                    target="_blank"></a>
                         </ul>
                     </div>
                 </div>
             </div>
         </footer>
     </div>
+    <script src="./js/index.js"></script>
 </body>
+
 </html>
